# Ception

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml
DeepFrame/configs/: config.yaml
ception/config/: base.py  checking.py  config.py  data.py  evaluation.py  experiment.py  interface.py  model.py  training.py  utils.py
ception/configs/: config.yaml
ception/data/annotation/: base.py  dummy_classification.py  interface.py
ception/data/annotation/classification/: json.py
ception/data/annotation/detection2d/: coco.py
ception/data/dataset/: base.py  classification.py  image_annotation.py  interface.py
ception/data/generation/: dummy_classification.py  dummy_detection2d.py
ception/data/image/: base.py  folder.py  interface.py
ception/data/transforms/: interface.py
ception/io/reading/: yaml.py
ception/utils/: argparse.py  config.py  experiment.py
configs/: config.yaml  dummy_classification.yaml
configs/classification/: dummy_iterate.yaml
configs/detection2d/: dummy_iterate.yaml
tools/: iterate.py  train.py
