[tool.poetry]
name = "deepframe"
version = "0.1.0"
description = "A deep learning framework to support computer vision tasks"
authors = ["Maximilian Menke <maximilianmenke@web.de>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "2.2.0"
matplotlib = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
