[tool.poetry]
name = "ception"
version = "0.1.0"
description = "A deep learning framework to support computer vision tasks"
authors = ["Maximilian Menke <maximilianmenke@web.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "2.2.0"
matplotlib = "^3.10.0"
pre-commit = "^4.0.1"
types-pyyaml = "^6.0.12.20241230"
pylint = "^3.3.3"
torch = "^2.5.1"
torchvision = "^0.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "W", # Warnings
    "F", # pyflakes
    "I", # Isort
    "PL", # Pylint
    "UP" # pyupgrade
]
